--- a/templates/apply.html
+++ b/templates/apply.html
@@ -56,6 +56,9 @@
                 <input type="text" name="name" placeholder="Candidate Name" required>
             </div>
             <div class="form-group">
+                <input type="email" name="email" placeholder="Professional Email" required>
+            </div>
+            <div class="form-group">
                 <input type="number" step="0.1" name="exp" placeholder="Years of Experience" required>
             </div>
 
