--- a/templates/register.html
+++ b/templates/register.html
@@ -25,6 +25,9 @@
                 <input type="text" name="username" placeholder="Username" required>
             </div>
             <div class="form-group">
+                <input type="email" name="email" placeholder="Professional Email" required>
+            </div>
+            <div class="form-group">
                 <input type="password" name="password" placeholder="Password" required>
             </div>
             <button type="submit">Complete Sign Up</button>
